Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/ThrowsConflict.out
ThrowsConflict.java:20:1: compiler.err.override.meth.doesnt.throw: (compiler.misc.cant.implement: method(), A, method(), I), java.lang.Exception
1 error
